--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -724,7 +724,7 @@ function displayPayslip(payslip) {
         const monthValue = monthInput.value;
 
         try {
-            const response = await fetch(`http://localhost:3000/api/payslips/${empId}/${monthValue}`);
+            const response = await fetch(`http://16.171.143.121:3104/api/payslips/${empId}/${monthValue}`);
             if (!response.ok) {
                 throw new Error('Payslip not found');
             }
