--- a/Payslip/index.html
+++ b/Payslip/index.html
@@ -1081,7 +1081,7 @@
         // Save payslip (from original page1, unchanged)
         async function savePayslip(payslipData) {
             try {
-                const response = await fetch('http://localhost:3000/api/payslips', {
+                const response = await fetch('http://16.171.143.121:3104/api/payslips', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(payslipData)
